fix background color on safari

--- a/styles/content.css
+++ b/styles/content.css
@@ -11,6 +11,7 @@
 #topHeadlines{
 	color: white;
 	position:relative;
+	list-style: none;
 }
 .topHeadlines-container{
 	padding: 0;		
@@ -49,7 +50,8 @@
 	padding: 0 0 0 10px;
 }
 .features-article{
-	padding: 0 10px 10px 0 !important;
+	// padding: 0 10px 10px 0 !important;
+	padding: 0 0 10px 10px !important
 }
 
 .features-article:nth-of-type(even){
